<resources>
    <string name="app_name">SmartGig</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="designation_ceo_founder">CEO/Founder</string>
    <string name="user_name">Mahesh Nayani</string>
    <string name="employee_details">Employee Details</string>
    <string name="employee_id">Employee Id<font color="#ff5566">*</font></string>
    <string name="enter_your_employee_id">Enter your Employee id</string>
    <string name="full_name">Full name<font color="#ff5566">*</font></string>
    <string name="enter_your_full_name">Enter your full name</string>
    <string name="gender">Gender<font color="#ff5566">*</font></string>

    <string name="dob">DOB<font color="#ff5566">*</font></string>
    <string name="email_id">Email Id<font color="#ff5566">*</font></string>
    <string name="enter_your_email_id">Enter your Email Id</string>
    <string name="mobile_no">Mobile No<font color="#ff5566">*</font></string>
    <string name="enter_your_mobile_number">Enter your Mobile Number</string>
    <string name="employee_type">Employee Type<font color="#ff5566">*</font></string>
    <string name="select_employee_type">Select employee type</string>
    <string name="designation">Designation<font color="#ff5566">*</font></string>
    <string name="role">Role<font color="#ff5566">*</font></string>
    <string name="qualification">Qualification<font color="#ff5566">*</font></string>
    <string name="primary_skills">Primary Skills<font color="#ff5566">*</font></string>
    <string name="enter_your_seconday_skills">Enter your seconday skills</string>
    <string name="secondary_skills">Secondary Skills<font color="#ff5566">*</font></string>
    <string name="primary_location">Primary Location<font color="#ff5566">*</font></string>
    <string name="current_location">Current Location<font color="#ff5566">*</font></string>
    <string name="doj">DOJ<font color="#ff5566">*</font></string>
    <string name="dom">DOM<font color="#ff5566">*</font></string>
    <string name="enter_your_current_location">Enter your Current location</string>
    <string name="last_working_day">Last Working Day<font color="#ff5566">*</font></string>
    <string name="ctc">CTC<font color="#ff5566">*</font></string>
    <string name="log_out">Log out</string>
    <string name="employee_id_colon">Employee Id:</string>
    <string name="email_id_colon">Email Id:</string>
    <string name="doj_colon">DOJ:</string>
    <string name="designation_colon">Designation:</string>
    <string name="work_location_colon">Work Location:</string>
    <string name="phone_no_colon">Phone No:</string>
    <string name="gender_prompt">Select Gender</string>
    <string-array name="gender_array">
        <item>Male</item>
        <item>Female</item>
        <item>Others</item>
    </string-array>
    <string name="title_activity_super_admin">SuperAdminActivity</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="employee_name">Employee Name<font color="#ff5566">*</font></string>
    <string name="search_and_select_employee">Search and select employee</string>
    <string name="admin">Admin</string>
    <string name="super_admin">Super Admin</string>
    <string name="status_colon">Status:</string>
    <string name="role_colon">Role:</string>
    <string name="add_client">Add Client</string>
    <string name="client_name">Client Name<font color="#ff5566">*</font></string>
    <string name="client_location">Client Location<font color="#ff5566">*</font></string>
    <string name="enter_client_name">Enter Client Name</string>
    <string name="enter_client_location">Enter Client Location</string>
    <string name="assign_role">Assign Role</string>
    <string name="employee_name_plain">Employee Name</string>
    <string name="dms">DMS</string>
    <string name="project_name_colon">Project Name:</string>
    <string name="client_name_colon">Client Name:</string>
    <string name="infionic">Infionic</string>
    <string name="start_date_colon">Start Date:</string>
    <string name="on_going">On Going</string>
    <string name="date_1">01–09–2022</string>
    <string name="client_details">Client Details</string>
    <string name="client_name_plain">Client Name</string>
    <string name="location_colon">Location:</string>
    <string name="bangalore">Bangalore</string>
    <string name="active">Active</string>
    <string name="add_project">Add Project</string>
    <string name="project_name">Project Name<font color="#ff5566">*</font></string>
    <string name="enter_project_name">Enter Project Name</string>
    <string name="project_details">Project Details<font color="#ff5566">*</font></string>
    <string name="enter_project_details">Enter project details</string>
    <string name="project_status">Project Status<font color="#ff5566">*</font></string>
    <string name="select_client">Select Client<font color="#ff5566">*</font></string>
    <string name="project_details_plain">Project Details</string>
    <string name="project_description_colon">Project Description:</string>
    <string name="dummy_text">Lorem ipsum dolorsita.....</string>
    <string name="in_progress">In Progress</string>
    <string name="project_name_plain">Project Name</string>
    <string name="salary">Salary</string>
    <string name="client">Client</string>
    <string name="download_data">Download Data</string>

    <string name="project">Project</string>
    <string name="admin_access_popup">Admin Access</string>
    <string name="add_employee_popup">Add Employee</string>
    <string name="add_client_popup">Add Client</string>
    <string name="add_client_project_popup">Add Client-Project</string>
    <string name="employee_list_popup">Employee List</string>
    <string name="pie_chart_popup">Pie Chart</string>
    <string name="view"><u>View</u></string>
    <string name="january">January</string>
    <string name="reset">Reset</string>
    <string name="assign">Assign</string>
    <string name="top_logo">top_logo</string>
    <string name="date_format">dd-mm-yyyy</string>
    <string name="zero">0</string>
    <string name="emp_id">SG1201</string>
    <string name="software_consultant">Software Consultant</string>
    <string name="email_smartgig">xyz@smartgig.tech</string>
    <string name="project_manager">Project Manager</string>
    <string name="phone_number">+91 9876543210</string>
</resources>