<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="1dp"
    app:cardBackgroundColor="@android:color/transparent"
    app:cardCornerRadius="0dp">

    <LinearLayout
        android:id="@+id/ll_recyclerViewLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_topLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/cb_checkbox"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginVertical="14dp"
                android:layout_marginStart="12dp"
                android:buttonTint="@color/chinese_black"
                app:layout_constraintBottom_toBottomOf="parent"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_employeeName"
                style="@style/TextViewAppearanceRecyclerView"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/employee_name_plain"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/tv_designationDetailTop"
                app:layout_constraintStart_toEndOf="@id/cb_checkbox"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_designationDetailTop"
                style="@style/TextViewAppearanceRecyclerView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="34dp"
                android:layout_marginEnd="10dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/software_consultant"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="@id/tv_employeeName"
                app:layout_constraintEnd_toStartOf="@id/iv_caretDown"
                app:layout_constraintStart_toEndOf="@id/tv_employeeName"
                app:layout_constraintTop_toTopOf="@id/tv_employeeName"


                />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:src="@drawable/ic_pencil"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/iv_delete"
                app:layout_constraintTop_toTopOf="parent"

                />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:src="@drawable/ic_delete_red"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/iv_caretDown"
                app:layout_constraintTop_toTopOf="parent"

                />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_caretDown"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="17dp"
                android:src="@drawable/ic_arrow_down"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_bottomLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible">

            <TextView
                android:id="@+id/tv_employeeIdHeading"
                style="@style/TextViewAppearanceRecyclerViewHeading"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="13dp"
                android:text="@string/employee_id_colon"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_employeeIdDetail"
                style="@style/TextViewAppearanceRecyclerViewDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:text="@string/emp_id"
                app:layout_constraintBottom_toBottomOf="@id/tv_employeeIdHeading"
                app:layout_constraintStart_toEndOf="@id/tv_employeeIdHeading"
                app:layout_constraintTop_toTopOf="@id/tv_employeeIdHeading" />

            <TextView
                android:id="@+id/tv_emailIdHeading"
                style="@style/TextViewAppearanceRecyclerViewHeading"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="22dp"
                android:layout_marginTop="10dp"
                android:text="@string/email_id_colon"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_employeeIdHeading" />

            <TextView
                android:id="@+id/tv_emailIdDetail"
                style="@style/TextViewAppearanceRecyclerViewDetail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="40dp"
                android:layout_marginBottom="1dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/email_smartgig"
                app:layout_constraintBottom_toBottomOf="@+id/tv_emailIdHeading"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/tv_employeeIdDetail"
                app:layout_constraintTop_toTopOf="@+id/tv_emailIdHeading" />

            <TextView
                android:id="@+id/tv_dojHeading"
                style="@style/TextViewAppearanceRecyclerViewHeading"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="22dp"
                android:layout_marginTop="10dp"
                android:text="@string/doj_colon"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_emailIdHeading" />

            <TextView
                android:id="@+id/tv_dojDetail"
                style="@style/TextViewAppearanceRecyclerViewDetail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="40dp"
                android:ellipsize="end"
                android:text="@string/date_1"
                app:layout_constraintBottom_toBottomOf="@+id/tv_dojHeading"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/tv_emailIdDetail"
                app:layout_constraintTop_toTopOf="@+id/tv_dojHeading" />

            <TextView
                android:id="@+id/tv_designationHeading"
                style="@style/TextViewAppearanceRecyclerViewHeading"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="22dp"
                android:layout_marginTop="10dp"
                android:text="@string/designation_colon"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_dojHeading" />

            <TextView
                android:id="@+id/tv_designationDetail"
                style="@style/TextViewAppearanceRecyclerViewDetail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="40dp"
                android:ellipsize="end"
                android:text="@string/project_manager"
                app:layout_constraintBottom_toBottomOf="@+id/tv_designationHeading"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/tv_dojDetail"
                app:layout_constraintTop_toTopOf="@+id/tv_designationHeading" />

            <TextView
                android:id="@+id/tv_workLocationHeading"
                style="@style/TextViewAppearanceRecyclerViewHeading"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="22dp"
                android:layout_marginTop="10dp"
                android:text="@string/work_location_colon"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_designationHeading" />

            <TextView
                android:id="@+id/tv_workLocationDetail"
                style="@style/TextViewAppearanceRecyclerViewDetail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="40dp"
                android:ellipsize="end"
                android:text="@string/bangalore"
                app:layout_constraintBottom_toBottomOf="@+id/tv_workLocationHeading"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/tv_designationDetail"
                app:layout_constraintTop_toTopOf="@+id/tv_workLocationHeading" />

            <TextView
                android:id="@+id/tv_phoneNumHeading"
                style="@style/TextViewAppearanceRecyclerViewHeading"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="22dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="11dp"
                android:text="@string/phone_no_colon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_workLocationHeading" />


            <TextView
                android:id="@+id/tv_phoneNumDetail"
                style="@style/TextViewAppearanceRecyclerViewDetail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="40dp"
                android:ellipsize="end"
                android:text="@string/phone_number"
                app:layout_constraintBottom_toBottomOf="@+id/tv_phoneNumHeading"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/tv_workLocationDetail"
                app:layout_constraintTop_toTopOf="@+id/tv_phoneNumHeading" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</com.google.android.material.card.MaterialCardView>