<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="1dp"
    app:cardBackgroundColor="@android:color/transparent"
    app:cardCornerRadius="0dp">

    <LinearLayout
        android:id="@+id/ll_recyclerViewLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_topLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_employeeName"
                style="@style/TextViewAppearanceRecyclerView"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="14dp"
                android:layout_marginStart="23dp"
                android:text="@string/employee_name_plain"
                android:maxLines="1"
                android:ellipsize="end"
                app:layout_constraintEnd_toStartOf="@id/tv_projectNameTop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_projectNameTop"
                android:layout_width="0dp"
                style="@style/TextViewAppearanceRecyclerView"
                android:layout_height="wrap_content"
                android:text="@string/dms"
                android:maxLines="1"
                android:ellipsize="end"
                android:visibility="visible"
                android:layout_marginStart="46dp"
                android:layout_marginEnd="10dp"
                app:layout_constraintTop_toTopOf="@id/tv_employeeName"
                app:layout_constraintBottom_toBottomOf="@id/tv_employeeName"
                app:layout_constraintEnd_toStartOf="@id/iv_caretDown"
                app:layout_constraintStart_toEndOf="@id/tv_employeeName"


                />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_caretDown"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="17dp"
                android:src="@drawable/ic_arrow_down"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_bottomLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">

            <TextView
                android:id="@+id/tv_projectNameHeading"
                style="@style/TextViewAppearanceRecyclerViewHeading"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="13dp"
                android:text="@string/project_name_colon"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_projectNameDetail"
                style="@style/TextViewAppearanceRecyclerViewDetail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:text="@string/dms"
                android:layout_marginEnd="40dp"
                android:ellipsize="end"
                android:maxLines="1"
                app:layout_constraintBottom_toBottomOf="@id/tv_projectNameHeading"
                app:layout_constraintStart_toEndOf="@id/tv_projectNameHeading"
                app:layout_constraintTop_toTopOf="@id/tv_projectNameHeading"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <TextView
                android:id="@+id/tv_clientNameHeading"
                style="@style/TextViewAppearanceRecyclerViewHeading"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="22dp"
                android:layout_marginTop="10dp"
                android:text="@string/client_name_colon"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_projectNameHeading" />

            <TextView
                android:id="@+id/tv_clientNameDetail"
                style="@style/TextViewAppearanceRecyclerViewDetail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="40dp"
                android:ellipsize="end"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/infionic"
                app:layout_constraintStart_toStartOf="@id/tv_projectNameDetail"
                app:layout_constraintTop_toTopOf="@id/tv_clientNameHeading"
                app:layout_constraintBottom_toBottomOf="@id/tv_clientNameHeading"

                />

            <TextView
                android:id="@+id/tv_startDateHeading"
                style="@style/TextViewAppearanceRecyclerViewHeading"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="22dp"
                android:layout_marginTop="10dp"
                android:text="@string/start_date_colon"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_clientNameHeading" />

            <TextView
                android:id="@+id/tv_roleDetail"
                style="@style/TextViewAppearanceRecyclerViewDetail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="40dp"
                android:ellipsize="end"
                android:text="@string/date_1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/tv_clientNameDetail"
                app:layout_constraintTop_toTopOf="@id/tv_startDateHeading"
                app:layout_constraintBottom_toBottomOf="@id/tv_startDateHeading" />

            <TextView
                android:id="@+id/tv_statusHeading"
                style="@style/TextViewAppearanceRecyclerViewHeading"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="22dp"
                android:layout_marginTop="10dp"
                android:text="@string/status_colon"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_startDateHeading"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="9dp"
                />

            <TextView
                android:id="@+id/tv_statusDetail"
                style="@style/TextViewAppearanceRecyclerViewDetail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/on_going"
                android:layout_marginEnd="40dp"
                android:ellipsize="end"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/tv_roleDetail"
                app:layout_constraintTop_toTopOf="@id/tv_statusHeading"
                app:layout_constraintBottom_toBottomOf="@id/tv_statusHeading"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</com.google.android.material.card.MaterialCardView>